[tool.poetry]
name = "wtrmarkbot"
version = "0.1.0"
description = ""
authors = ["kiriharu <kiriharu@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.15"
loguru = "^0.5.3"
tortoise-orm = {extras = ["aiomysql"], version = "^0.17.8"}
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]
black = {extras = ["d"], version = "^21.10b0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
